ASUSFETest/src/objects/Student_Program_Plan__c.object
<CustomObject>
    <description>Academic History of student&apos;s enrollment. Lists the related College (Program) and Major (Plan) with its current status.</description>
    <fields>
        <fullName>Action_Reason__c</fullName>
        <inlineHelpText>A simple description of why an Action was taken</inlineHelpText>
        <label>Action Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Application Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied to Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent Approved Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy App - Cert Prog Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division of Graduate Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grad POS Sub-Plan Chg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-degree to Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled in Previous Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requirement term changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Withdrawal (GRAD)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <inlineHelpText>The Action responsible for the Status</inlineHelpText>
        <label>Action</label>
        <picklist>
            <picklistValues>
                <fullName>Activate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completion of Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matriculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Number__c</fullName>
        <inlineHelpText>The Application ID stored on a Student Program record in PeopleSoft</inlineHelpText>
        <label>Application Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Campus Location specified on the Student Program Plan</inlineHelpText>
        <label>Campus</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Student Program Plans</relationshipLabel>
        <relationshipName>Student_Program_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Career__c</fullName>
        <label>Career</label>
        <picklist>
            <picklistValues>
                <fullName>Undergraduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graduate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Student_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <inlineHelpText>The date this Student Plan was updated to the Status shown</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipName>Student_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Program associated with this Student Plan record
One Program may have multiple Plan records (e.g. a Major and a Minor)</inlineHelpText>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipName>Student_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The &quot;Current Status&quot; of the Student Program associated with this Student Plan</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active in Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinued</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Student Program Plan</label>
    <listViews>
        <fullName>AllGraduateProgramPlans</fullName>
        <columns>Contact__c</columns>
        <columns>Campus__c</columns>
        <columns>Program__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Career__c</field>
            <operation>equals</operation>
            <value>Graduate</value>
        </filters>
        <label>All Graduate Program Plans</label>
    </listViews>
    <listViews>
        <fullName>AllLawProgramPlans</fullName>
        <columns>Contact__c</columns>
        <columns>Campus__c</columns>
        <columns>Program__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Career__c</field>
            <operation>equals</operation>
            <value>Law</value>
        </filters>
        <label>All Law Program Plans</label>
    </listViews>
    <listViews>
        <fullName>AllStudentProgramPlans</fullName>
        <columns>Contact__c</columns>
        <columns>Career__c</columns>
        <columns>Campus__c</columns>
        <columns>Program__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Student Program Plans</label>
    </listViews>
    <listViews>
        <fullName>AllUndergraduateProgramPlans</fullName>
        <columns>Contact__c</columns>
        <columns>Campus__c</columns>
        <columns>Program__c</columns>
        <columns>Plan__c</columns>
        <columns>Status__c</columns>
        <columns>Action__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Career__c</field>
            <operation>equals</operation>
            <value>Undergraduate</value>
        </filters>
        <label>All Undergraduate Program Plans</label>
    </listViews>
    <nameField>
        <label>Student Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Program Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>